@@ -1,3 +1,9 @@
+2002-11-22  Tim Musson  <trmusson@ihug.co.nz>
+
+	* gnotski.c: (about_cb), (score_cb), (game_score):
+	No more multiple About dialogs, and Score dialog is now modal,
+	fixing #97320 for gnotski. Also, About no longer pinches iagno's icon!
+
 2002-11-18  Fernando Herrera <fherrera@onirica.com>
 
 	* gnotski.desktop.in: add X-GNOME-BUGZILLA stuff
